{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 684,
  "lineage": "73de4bab-8c21-fc69-33a3-ecbcc18761de",
  "resources": [
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "i-070390f70dd92915d",
          "schema_version": 0,
          "attributes": {
            "ami": "ami-0c89304edf57df92a",
            "arn": "arn:aws:ec2:us-west-1:009611472941:instance/i-070390f70dd92915d",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "id": "i-070390f70dd92915d",
            "instance_id": "i-070390f70dd92915d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "key_name": "kubernetes-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-0b0aef192112787a4",
            "placement_partition_number": 0,
            "private_dns": "ip-10-240-0-22.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.240.0.22",
            "public_dns": "ec2-52-53-226-190.us-west-1.compute.amazonaws.com",
            "public_ip": "52.53.226.190",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-0e598fb1485a41efb",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0ed2b50627629fa3a",
            "tags": {
              "Id": "worker-2",
              "Name": "kubernetes"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0de87d69f7eabb28d"
            ]
          }
        },
        {
          "index_key": "i-0b395f6d23ed80299",
          "schema_version": 0,
          "attributes": {
            "ami": "ami-0c89304edf57df92a",
            "arn": "arn:aws:ec2:us-west-1:009611472941:instance/i-0b395f6d23ed80299",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "id": "i-0b395f6d23ed80299",
            "instance_id": "i-0b395f6d23ed80299",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "key_name": "kubernetes-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-0760e01265e6a3fec",
            "placement_partition_number": 0,
            "private_dns": "ip-10-240-0-20.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.240.0.20",
            "public_dns": "ec2-3-101-12-102.us-west-1.compute.amazonaws.com",
            "public_ip": "3.101.12.102",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-001283958f1c1d714",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0ed2b50627629fa3a",
            "tags": {
              "Id": "worker-0",
              "Name": "kubernetes"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0de87d69f7eabb28d"
            ]
          }
        },
        {
          "index_key": "i-0d2270999e49e0813",
          "schema_version": 0,
          "attributes": {
            "ami": "ami-0c89304edf57df92a",
            "arn": "arn:aws:ec2:us-west-1:009611472941:instance/i-0d2270999e49e0813",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "id": "i-0d2270999e49e0813",
            "instance_id": "i-0d2270999e49e0813",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "key_name": "kubernetes-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-07e1eb58168b0658e",
            "placement_partition_number": 0,
            "private_dns": "ip-10-240-0-21.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.240.0.21",
            "public_dns": "ec2-54-193-141-1.us-west-1.compute.amazonaws.com",
            "public_ip": "54.193.141.1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-09846274e260878c8",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0ed2b50627629fa3a",
            "tags": {
              "Id": "worker-1",
              "Name": "kubernetes"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0de87d69f7eabb28d"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c83d921e1fc7ceab",
            "association_id": "eipassoc-05f7c94a3cc97f2b8",
            "domain": "vpc",
            "id": "eipalloc-0c83d921e1fc7ceab",
            "network_border_group": "us-west-1",
            "network_interface": "eni-0609688de3101d4f8",
            "private_dns": "ip-10-240-0-53.us-west-1.compute.internal",
            "private_ip": "10.240.0.53",
            "public_dns": "ec2-54-193-150-232.us-west-1.compute.amazonaws.com",
            "public_ip": "54.193.150.232",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Name": "kubernetes"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "controller",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c89304edf57df92a",
            "arn": "arn:aws:ec2:us-west-1:009611472941:instance/i-0b7681efc37e3e8e4",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-01a9fb87f30abee6a",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b7681efc37e3e8e4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kubernetes-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03bbd61fc199a2dad",
            "private_dns": "ip-10-240-0-10.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.240.0.10",
            "public_dns": "ec2-13-52-245-163.us-west-1.compute.amazonaws.com",
            "public_ip": "13.52.245.163",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-01a9fb87f30abee6a",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0ed2b50627629fa3a",
            "tags": {
              "Id": "controller-0"
            },
            "tags_all": {
              "Id": "controller-0",
              "Name": "kubernetes"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0de87d69f7eabb28d"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.inbound",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "tls_private_key.dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c89304edf57df92a",
            "arn": "arn:aws:ec2:us-west-1:009611472941:instance/i-0185080cc8daeb5c1",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-05792d077487c55e9",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0185080cc8daeb5c1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kubernetes-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-064ee6b22233a9661",
            "private_dns": "ip-10-240-0-11.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.240.0.11",
            "public_dns": "ec2-54-215-138-36.us-west-1.compute.amazonaws.com",
            "public_ip": "54.215.138.36",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-05792d077487c55e9",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0ed2b50627629fa3a",
            "tags": {
              "Id": "controller-1"
            },
            "tags_all": {
              "Id": "controller-1",
              "Name": "kubernetes"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0de87d69f7eabb28d"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.inbound",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "tls_private_key.dev"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c89304edf57df92a",
            "arn": "arn:aws:ec2:us-west-1:009611472941:instance/i-0d9dd30bf5c5da324",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-0615144c682648faa",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d9dd30bf5c5da324",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kubernetes-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0648a3638278a08e8",
            "private_dns": "ip-10-240-0-12.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.240.0.12",
            "public_dns": "ec2-13-57-247-126.us-west-1.compute.amazonaws.com",
            "public_ip": "13.57.247.126",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-0615144c682648faa",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0ed2b50627629fa3a",
            "tags": {
              "Id": "controller-2"
            },
            "tags_all": {
              "Id": "controller-2",
              "Name": "kubernetes"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0de87d69f7eabb28d"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.inbound",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "tls_private_key.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c89304edf57df92a",
            "arn": "arn:aws:ec2:us-west-1:009611472941:instance/i-0b395f6d23ed80299",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-001283958f1c1d714",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b395f6d23ed80299",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kubernetes-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0760e01265e6a3fec",
            "private_dns": "ip-10-240-0-20.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.240.0.20",
            "public_dns": "ec2-3-101-12-102.us-west-1.compute.amazonaws.com",
            "public_ip": "3.101.12.102",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-001283958f1c1d714",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0ed2b50627629fa3a",
            "tags": {
              "Id": "worker-0"
            },
            "tags_all": {
              "Id": "worker-0",
              "Name": "kubernetes"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0de87d69f7eabb28d"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.inbound",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "tls_private_key.dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c89304edf57df92a",
            "arn": "arn:aws:ec2:us-west-1:009611472941:instance/i-0d2270999e49e0813",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-09846274e260878c8",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d2270999e49e0813",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kubernetes-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07e1eb58168b0658e",
            "private_dns": "ip-10-240-0-21.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.240.0.21",
            "public_dns": "ec2-54-193-141-1.us-west-1.compute.amazonaws.com",
            "public_ip": "54.193.141.1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-09846274e260878c8",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0ed2b50627629fa3a",
            "tags": {
              "Id": "worker-1"
            },
            "tags_all": {
              "Id": "worker-1",
              "Name": "kubernetes"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0de87d69f7eabb28d"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.inbound",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "tls_private_key.dev"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c89304edf57df92a",
            "arn": "arn:aws:ec2:us-west-1:009611472941:instance/i-070390f70dd92915d",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-0e598fb1485a41efb",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-070390f70dd92915d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kubernetes-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b0aef192112787a4",
            "private_dns": "ip-10-240-0-22.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.240.0.22",
            "public_dns": "ec2-52-53-226-190.us-west-1.compute.amazonaws.com",
            "public_ip": "52.53.226.190",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-0e598fb1485a41efb",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0ed2b50627629fa3a",
            "tags": {
              "Id": "worker-2"
            },
            "tags_all": {
              "Id": "worker-2",
              "Name": "kubernetes"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0de87d69f7eabb28d"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.inbound",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "tls_private_key.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:009611472941:internet-gateway/igw-004729239add4a92d",
            "id": "igw-004729239add4a92d",
            "owner_id": "009611472941",
            "tags_all": {
              "Name": "kubernetes"
            },
            "vpc_id": "vpc-0f685912263023a87"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:009611472941:loadbalancer/net/kubernetes/4370d70eae8ec3fe",
            "arn_suffix": "net/kubernetes/4370d70eae8ec3fe",
            "dns_name": "kubernetes-4370d70eae8ec3fe.elb.us-west-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-west-1:009611472941:loadbalancer/net/kubernetes/4370d70eae8ec3fe",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "kubernetes",
            "subnet_mapping": [
              {
                "allocation_id": "eipalloc-0c83d921e1fc7ceab",
                "subnet_id": "subnet-0ed2b50627629fa3a"
              }
            ],
            "subnets": [
              "subnet-0ed2b50627629fa3a"
            ],
            "tags_all": {
              "Name": "kubernetes"
            },
            "vpc_id": "vpc-0f685912263023a87",
            "zone_id": "Z24FKFUX50B4VW"
          },
          "dependencies": [
            "aws_eip.main",
            "aws_internet_gateway.main",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "forward",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:009611472941:listener/net/kubernetes/4370d70eae8ec3fe/9ee7d1fde29f995c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:009611472941:targetgroup/kubernetes/9eb584ddd0ff8911",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:009611472941:listener/net/kubernetes/4370d70eae8ec3fe/9ee7d1fde29f995c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:009611472941:loadbalancer/net/kubernetes/4370d70eae8ec3fe",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Name": "kubernetes"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.main",
            "aws_internet_gateway.main",
            "aws_lb.main",
            "aws_lb_target_group.main",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:009611472941:targetgroup/kubernetes/9eb584ddd0ff8911",
            "arn_suffix": "targetgroup/kubernetes/9eb584ddd0ff8911",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/healthz",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:009611472941:targetgroup/kubernetes/9eb584ddd0ff8911",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "name": "kubernetes",
            "port": 6443,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags_all": {
              "Name": "kubernetes"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f685912263023a87"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:009611472941:targetgroup/kubernetes/9eb584ddd0ff8911-20230303230737848100000001",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:009611472941:targetgroup/kubernetes/9eb584ddd0ff8911",
            "target_id": "10.240.0.10"
          },
          "dependencies": [
            "aws_lb_target_group.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:009611472941:targetgroup/kubernetes/9eb584ddd0ff8911-20230303230737903600000002",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:009611472941:targetgroup/kubernetes/9eb584ddd0ff8911",
            "target_id": "10.240.0.11"
          },
          "dependencies": [
            "aws_lb_target_group.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:009611472941:targetgroup/kubernetes/9eb584ddd0ff8911-20230303230737926300000003",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:009611472941:targetgroup/kubernetes/9eb584ddd0ff8911",
            "target_id": "10.240.0.12"
          },
          "dependencies": [
            "aws_lb_target_group.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eni-0760e01265e6a3fec",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.200.1.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-039294c49c7125aaf4077485891",
            "instance_id": "i-0b395f6d23ed80299",
            "instance_owner_id": "009611472941",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-0760e01265e6a3fec",
            "origin": "CreateRoute",
            "route_table_id": "rtb-039294c49c7125aaf",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.worker",
            "aws_internet_gateway.main",
            "aws_key_pair.deployer",
            "aws_route_table.main",
            "aws_security_group.inbound",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_instance.worker",
            "tls_private_key.dev"
          ]
        },
        {
          "index_key": "eni-07e1eb58168b0658e",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.200.2.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-039294c49c7125aaf1973226989",
            "instance_id": "i-0d2270999e49e0813",
            "instance_owner_id": "009611472941",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-07e1eb58168b0658e",
            "origin": "CreateRoute",
            "route_table_id": "rtb-039294c49c7125aaf",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.worker",
            "aws_internet_gateway.main",
            "aws_key_pair.deployer",
            "aws_route_table.main",
            "aws_security_group.inbound",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_instance.worker",
            "tls_private_key.dev"
          ]
        },
        {
          "index_key": "eni-0b0aef192112787a4",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.200.0.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-039294c49c7125aaf945138918",
            "instance_id": "i-070390f70dd92915d",
            "instance_owner_id": "009611472941",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-0b0aef192112787a4",
            "origin": "CreateRoute",
            "route_table_id": "rtb-039294c49c7125aaf",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.worker",
            "aws_internet_gateway.main",
            "aws_key_pair.deployer",
            "aws_route_table.main",
            "aws_security_group.inbound",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_instance.worker",
            "tls_private_key.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:009611472941:route-table/rtb-039294c49c7125aaf",
            "id": "rtb-039294c49c7125aaf",
            "owner_id": "009611472941",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": null,
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "igw-004729239add4a92d",
                "instance_id": null,
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {},
            "tags_all": {
              "Name": "kubernetes"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f685912263023a87"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2667c9b35db8281",
            "route_table_id": "rtb-039294c49c7125aaf",
            "subnet_id": "subnet-0ed2b50627629fa3a"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:009611472941:security-group/sg-0de87d69f7eabb28d",
            "description": "Kubernetes security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0de87d69f7eabb28d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ICMP aka ping",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow https 443",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow https 6443",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "10.240.0.0/24",
                  "10.200.0.0/16"
                ],
                "description": "Allow all internal communication for all protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "kubernetes",
            "name_prefix": "",
            "owner_id": "009611472941",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Name": "kubernetes"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f685912263023a87"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:009611472941:subnet/subnet-0ed2b50627629fa3a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.240.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed2b50627629fa3a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "009611472941",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Name": "kubernetes"
            },
            "vpc_id": "vpc-0f685912263023a87"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:009611472941:vpc/vpc-0f685912263023a87",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.240.0.0/24",
            "default_network_acl_id": "acl-0c5b93b5c372f3236",
            "default_route_table_id": "rtb-00546fde7f92984f5",
            "default_security_group_id": "sg-03bd391636893946c",
            "dhcp_options_id": "dopt-7efb2918",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f685912263023a87",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00546fde7f92984f5",
            "owner_id": "009611472941",
            "tags_all": {
              "Name": "kubernetes"
            }
          }
        }
      ]
    }
  ]
}